--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,194 +1,265 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+		'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
 
 /*
 F1Regular and F1RegularItalic
 */
 @font-face {
-  font-family: 'F1';
-  src: url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Regular/Formula1-Regular.woff2") format("woff2"), url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Regular/Formula1-Regular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
+	font-family: 'F1';
+	src: url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Regular/Formula1-Regular.woff2')
+			format('woff2'),
+		url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Regular/Formula1-Regular.woff')
+			format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
 
 @font-face {
-  font-family: 'F1';
-  src: url("https://www.formula1.com/etc/designs/fom-website/fonts/F1RegularItalic/Formula1-Italic.woff2") format("woff2"), url("https://www.formula1.com/etc/designs/fom-website/fonts/F1RegularItalic/Formula1-Italic.woff") format("woff");
-  font-weight: normal;
-  font-style: italic; }
+	font-family: 'F1';
+	src: url('https://www.formula1.com/etc/designs/fom-website/fonts/F1RegularItalic/Formula1-Italic.woff2')
+			format('woff2'),
+		url('https://www.formula1.com/etc/designs/fom-website/fonts/F1RegularItalic/Formula1-Italic.woff')
+			format('woff');
+	font-weight: normal;
+	font-style: italic;
+}
 
 /*
 F1Bold
 */
 @font-face {
-  font-family: 'F1Bold';
-  src: url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Bold/Formula1-Bold.woff2") format("woff2"), url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Bold/Formula1-Bold.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
+	font-family: 'F1Bold';
+	src: url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Bold/Formula1-Bold.woff2')
+			format('woff2'),
+		url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Bold/Formula1-Bold.woff')
+			format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
 
 /*
 F1Black
 */
 @font-face {
-  font-family: 'F1Black';
-  src: url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Black/Formula1-Black.woff2") format("woff2"), url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Black/Formula1-Black.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
+	font-family: 'F1Black';
+	src: url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Black/Formula1-Black.woff2')
+			format('woff2'),
+		url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Black/Formula1-Black.woff')
+			format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
 
 /*
 F1Wide
 */
 @font-face {
-  font-family: 'F1Wide';
-  src: url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Wide/Formula1-Wide.woff2") format("woff2"), url("https://www.formula1.com/etc/designs/fom-website/fonts/F1Wide/Formula1-Wide.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
+	font-family: 'F1Wide';
+	src: url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Wide/Formula1-Wide.woff2')
+			format('woff2'),
+		url('https://www.formula1.com/etc/designs/fom-website/fonts/F1Wide/Formula1-Wide.woff')
+			format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
 
 /*
 F1YEAR
 */
 @font-face {
-  font-family: 'F1YEAR';
-  src: url("https://www.formula1.com/etc/designs/fom-website/fonts/F1YEAR/F1YEARRegular.woff2") format("woff2"), url("https://www.formula1.com/etc/designs/fom-website/fonts/F1YEAR/F1YEARRegular.woff") format("woff");
-  font-weight: normal;
-  font-style: normal; }
-
+	font-family: 'F1YEAR';
+	src: url('https://www.formula1.com/etc/designs/fom-website/fonts/F1YEAR/F1YEARRegular.woff2')
+			format('woff2'),
+		url('https://www.formula1.com/etc/designs/fom-website/fonts/F1YEAR/F1YEARRegular.woff')
+			format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
 
 :root {
-  --def-trans: all .25s cubic-bezier(0,0,0,1);
-  --def-shadow: 2px 2px 5px rgba(0,0,0,0.15), 0px 0px 15px rgba(0,0,0,0.15);
-  --light-grey: rgb(220,220,220);
-  --dark-grey: rgb(49, 42, 42);
-  --dark-grey-hover: rgb(69,62,62);
-  --red: rgb(255,6,0);
-  
-  --def-trans-timing: .25s;
-  --transition: all var(--def-trans-timing) cubic-bezier(0,0,0,1);
+	--def-trans: all 0.25s cubic-bezier(0, 0, 0, 1);
+	--def-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15),
+		0px 0px 15px rgba(0, 0, 0, 0.15);
+	--light-grey: rgb(220, 220, 220);
+	--text-dark: rgb(89, 92, 92);
+	--dark-grey: rgb(49, 42, 42);
+	--dark-grey-hover: rgb(69, 62, 62);
+	--red: rgb(255, 6, 0);
+
+	--def-trans-timing: 0.25s;
+	--transition: all var(--def-trans-timing) cubic-bezier(0, 0, 0, 1);
 }
 
-html, body {
-  font-size: 14px;
-  line-height: 1.3em;
+html,
+body {
+	font-size: 13px;
+	line-height: 1.2em;
+	color: var(--text-dark);
 }
-
 
 .sidebar {
-  display: flex;
-  justify-content: left;
+	display: flex;
+	justify-content: left;
 }
 
-input, select, label, button {
-  font-size: 1.2rem;
-  padding: .6em 1.5em;
-  color: var(--dark-grey);
-  background-color: white;
-  margin: 1em .2em;
-  font-family: 'F1Bold';
-  border-radius: 3px;
-  transition: var(--def-trans);
+input,
+select,
+label,
+button {
+	font-size: 1.2rem;
+	padding: 0.6em 1.5em;
+	color: var(--text-dark);
+	background-color: white;
+	margin: 1em 0.2em;
+	font-family: 'F1Bold';
+	border-radius: 3px;
+	transition: var(--def-trans);
 }
 
-select, input, button {
-  border: 1px solid var(--light-grey);
+.loading {
+	margin: 20px;
+	width: 25px;
+	height: 25px;
+	border: 3px solid white;
+	animation: 0.4s rotate linear infinite;
 }
 
-.select:hover, button:hover {
-  background: var(--light-grey);
-  cursor: pointer;
+@keyframes rotate {
+	0% {
+		transform: rotate(0);
+	}
+	50% {
+		transform: rotate(180deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+button {
+	padding: 0.6em 1em;
+}
+
+select,
+input,
+button {
+	border: 1px solid var(--light-grey);
+}
+
+.select:hover,
+button:hover {
+	background: var(--light-grey);
+	cursor: pointer;
 }
 
 option {
-  padding: .3em .6em;
+	padding: 0.3em 0.6em;
 }
 
 .filter {
-  display:flex;
+	display: flex;
 }
 
 .filter-year {
-  background: var(--red);
+	background: var(--red);
 }
 
 .filter-year label {
-  background: none;
-  color: white;
+	background: none;
+	color: white;
 }
 
-.driver-name-list, .constructor-name-list {
-  font-family: 'F1';
-  text-align: left;
-  width: 15em;
-  padding: 1em;
-  color:white;
-  background: var(--dark-grey);
+.driver-name-list,
+.constructor-name-list {
+	font-family: 'F1';
+	text-align: left;
+	width: 15em;
+	padding: 1em;
+	color: white;
+	background: var(--dark-grey);
 }
 
-.driver-name, .constructor-name {
-  position: relative;
-  padding: .8em 1.2em;
-  display:flex; 
-  justify-content: left;
-  transition: var(--def-trans);
+.driver-result-list {
+	font-family: 'F1';
+	text-align: left;
+	padding: 1em;
+	color: white;
+	background: var(--dark-grey);
+}
+
+.driver-race-results {
+	display: flex;
+	justify-content: space-between;
+	padding: 0.8em 1.2em;
+}
+
+.driver-name,
+.constructor-name {
+	position: relative;
+	padding: 0.8em 1.2em;
+	display: flex;
+	justify-content: left;
+	transition: var(--def-trans);
 }
 
 .constructor-name {
-  font-family: 'F1Bold';
+	font-family: 'F1Bold';
 }
 
 .driver-name:before {
-  content: '';
-  display: block;
-  position: absolute;
-  width: .3em;
-  height: 1em;
-  left: 0;
-  top: calc(50% - 0.5em);
-  background: transparent;
+	content: '';
+	display: block;
+	position: absolute;
+	width: 0.3em;
+	height: 1em;
+	left: 0;
+	top: calc(50% - 0.5em);
+	background: transparent;
 }
 
 .driver-name:hover {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .driver-name:hover:before {
-  background: white;
+	background: white;
 }
 
 .driver-name .-given-name {
-  text-transform: capitalize;
+	text-transform: capitalize;
 }
 
 .driver-name .-given-name span {
-  display: inline-block;
-  width: 2em;
-  padding: .1em 0;
-  text-align: center;
-  background: rgb(255,255,255,0.1);
-  border-radius: 3px;
-  margin-right: .4em;
+	display: inline-block;
+	width: 2em;
+	padding: 0.1em 0;
+	text-align: center;
+	background: rgb(255, 255, 255, 0.1);
+	border-radius: 3px;
+	margin-right: 0.4em;
 }
 
 .driver-name .-given-name span.placeholder {
-  display: inline-block;
-  width: 2em;
-  padding: .1em 0;
-  margin-right: .4em;
-  background: none; 
+	display: inline-block;
+	width: 2em;
+	padding: 0.1em 0;
+	margin-right: 0.4em;
+	background: none;
 }
 
 .driver-name .-family-name {
-  margin-left: .3em;
-  text-transform:uppercase;
-  font-family: 'F1Bold';
+	margin-left: 0.3em;
+	text-transform: uppercase;
+	font-family: 'F1Bold';
 }
-
